--- a/config/asset_compress.ini
+++ b/config/asset_compress.ini
@@ -30,6 +30,9 @@ cachePath = WEBROOT/cache_css/
 files[] = bootstrap.min.css
 files[] = font-awesome.min.css
 files[] = slicknav.min.css
+files[] = typography.css
+files[] = default-css.css
+files[] = styles.css
 
 
 [allcss2.css]
