--- a/config/asset_compress.ini
+++ b/config/asset_compress.ini
@@ -16,7 +16,7 @@ files[] = jquery.magnific-popup.min.js
 files[] = jquery-aspieprogress.min.js
 files[] = plugins.js
 files[] = scripts.js
-
+filters[] = JsMinFilter
 
 
 
