--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cakephp/migrations": "^1.8.0",
         "cakephp/plugin-installer": "^1.0",
         "josegonzalez/dotenv": "3.*",
+        "linkorb/jsmin-php": "^1.0",
         "markstory/asset_compress": "^3.4",
         "mobiledetect/mobiledetectlib": "2.*"
     },
