--- a/config/asset_compress.ini
+++ b/config/asset_compress.ini
@@ -26,6 +26,7 @@ paths[] = WEBROOT/template_front/css/*
 cachePath = WEBROOT/cache_css/
 
 
+
 [allcss.css]
 files[] = bootstrap.min.css
 files[] = slicknav.min.css
@@ -33,3 +34,4 @@ files[] = slicknav.min.css
 
 [allcss2.css]
 files[] = responsive.css
+filters[] = CssMinFilter
